Bug #2840
closedTk doesn't built in mingw
Description
=begin
Currently the tk extension "search" finds existing Tk headers (ex: c:\Tcl), but then fails when it tries to compile with them.
Find Tcl/Tk libraries. Make tcltklib.so which is required by Ruby/Tk.
make[1]: Entering directory `/c/dev/ruby/downloads/ruby_trunk/ext/tk'
../../miniruby.exe -I'../..' -I'../.././lib' -I'../../.ext/i386-mingw32' -I'../../.ext/common' -I./- -I'../.././ext' -rpurelib.rb -e "puts 'EXPORTS', 'Init_tcltklib'" > tcltklib-i386-mingw32.def
gcc -I. -I../../.ext/include/i386-mingw32 -I../.././include -I../.././ext/tk -DRUBY_EXTCONF_H="extconf.h" -DPACKAGE_NAME="" -DPACKAGE_TARNAME="" -DPACKAGE_VERSION="" -DPACKAGE_STRING="" -DPACKAGE_BUGREPORT="" -DHAVE_NO_SEH=1 -DEXCEPTION_DISPOSITION=int -DWITH_TCL_ENABLE_THREAD=0 -O3 -g -Wall -Wno-unused-parameter -Wno-parentheses -Wpointer-arith -Wwrite-strings -Wno-long-long -o stubs.o -c stubs.c
In file included from stubs.c:8:
stubs.h:1:17: tcl.h: No such file or directory
In file included from stubs.c:8:
stubs.h:8: error: syntax error before '*' token
=end
Updated by nagai (Hidetoshi Nagai) about 16 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
=begin
This issue was solved with changeset r26901.
Roger, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
=end