* ext/tk/extconf.rb: fix [Bug #2840] Tk doesn't built in mingw. * ext/tk/lib/tk.rb: forgot updating RELEASE_DATE at last commit. * ext/tk/tkutil/tkutil.c: ditto.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26901 b2dd03c8-39d4-4d8f-98ff-823fe69b080e