ext/tk/lib/tk.rb
@@ -5663,7 +5663,7 @@ TkWidget = TkWindow
 #Tk.freeze
 
 module Tk
-  RELEASE_DATE = '2009-08-04'.freeze
+  RELEASE_DATE = '2010-02-01'.freeze
 
   autoload :AUTO_PATH,        'tk/variable'
   autoload :TCL_PACKAGE_PATH, 'tk/variable'
